@@ -68,9 +68,10 @@ GList *twitux_network_get_friends	(void);
 GList *twitux_network_get_followers	(void);
 
 /* Get an image from servers */
-void twitux_network_get_image		(const gchar *url_image,
-					 const gchar *username,
-					 GtkTreeIter iter);
+void twitux_network_get_image (const gchar *url_image,
+			      			   const gchar *username,
+							   GtkTreeIter iter,
+							   GtkListStore *store);
 
 /* Add a user to follow */
 void twitux_network_add_user		(const gchar *username);
